[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "radiotools"
author = "Christian Glaser"
author-email = "work@c-glaser.de"
home-page = "https://github.com/nu-radio/radiotools"
requires-python=">=3.6"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

requires = [
    "numpy",
    "scipy",
]
